--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.png">
-    <title>Our Moments &#10084;</title>
+    <title>Our Moments</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link href='http://fonts.googleapis.com/css2?family=Lato:wght@100;300;400' rel='stylesheet' type='text/css'>
     <script defer src="app.js"></script>
