--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.png">
     <title>Our Moments</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link href='http://fonts.googleapis.com/css2?family=Lato:wght@100;300;400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400' rel='stylesheet' type='text/css'>
     <script defer src="app.js"></script>
 </head>
 <body>
